force-app/force-app/force-app/main/default/objects/BankAccount__c/fields/RTGS_NEFT_IFSC_CODE__c.field-meta.xml
<CustomField>
    <fullName>RTGS_NEFT_IFSC_CODE__c</fullName>
    <label>RTGS /NEFT/ IFSC CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>