force-app/force-app/force-app/main/default/objects/BankAccount__c/fields/Search_All__c.field-meta.xml
<CustomField>
    <fullName>Search_All__c</fullName>
    <defaultValue>&apos;All&apos;</defaultValue>
    <label>Search All</label>
    <length>255</length>
    <type>Text</type>
</CustomField>