force-app/force-app/force-app/main/default/objects/BankAccount__c/fields/SWIFT_ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>SWIFT_ADDRESS__c</fullName>
    <label>SWIFT ADDRESS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>