force-app/force-app/force-app/main/default/objects/BankAccount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bank_Name__c</columns>
    <columns>Account_Number__c</columns>
    <columns>RTGS_NEFT_IFSC_CODE__c</columns>
    <columns>Branch__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>